--- a/templates/components/sidebar.html.twig
+++ b/templates/components/sidebar.html.twig
@@ -1,47 +1,101 @@
 <div class="fixed top-0 left-0 h-screen w-16 m-0 flex items-center flex-col justify-between bg-white shadow-lg py-9">
 
-	<div class="flex flex-col space-y-9">
-		{# home #}
-		<a up-target="#content" up-href="{{ path('dashboard_index') }}" up-history="replace">
-			<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-home"><path d="m3 9 9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"/><polyline points="9 22 9 12 15 12 15 22"/></svg>
-		</a>
+    <div class="flex flex-col space-y-9">
+        {# home #}
+        <a up-target="#content" up-href="{{ path('dashboard_index') }}" up-history="replace">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24" fill="none"
+                 stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                 class="lucide lucide-home">
+                <path d="m3 9 9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"/>
+                <polyline points="9 22 9 12 15 12 15 22"/>
+            </svg>
+        </a>
 
-		{# address #}
-		<a up-target="#content" up-href="{{ path('address_index') }}" up-history="replace">
-			<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-locate"><line x1="2" x2="5" y1="12" y2="12"/><line x1="19" x2="22" y1="12" y2="12"/><line x1="12" x2="12" y1="2" y2="5"/><line x1="12" x2="12" y1="19" y2="22"/><circle cx="12" cy="12" r="7"/></svg>
-		</a>
+        {# address #}
+        <a up-target="#content" up-href="{{ path('address_index') }}" up-history="replace">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24" fill="none"
+                 stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                 class="lucide lucide-locate">
+                <line x1="2" x2="5" y1="12" y2="12"/>
+                <line x1="19" x2="22" y1="12" y2="12"/>
+                <line x1="12" x2="12" y1="2" y2="5"/>
+                <line x1="12" x2="12" y1="19" y2="22"/>
+                <circle cx="12" cy="12" r="7"/>
+            </svg>
+        </a>
 
-		{# company #}
-		<a up-target="#content" up-href="{{ path('dashboard_company_index') }}" up-history="replace">
-			<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-building-2"><path d="M6 22V4a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v18Z"/><path d="M6 12H4a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2h2"/><path d="M18 9h2a2 2 0 0 1 2 2v9a2 2 0 0 1-2 2h-2"/><path d="M10 6h4"/><path d="M10 10h4"/><path d="M10 14h4"/><path d="M10 18h4"/></svg>
-		</a>
+        {# company #}
+        <a up-target="#content" up-href="{{ path('dashboard_company_index') }}" up-history="replace">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                 stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                 class="lucide lucide-building-2">
+                <path d="M6 22V4a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v18Z"/>
+                <path d="M6 12H4a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2h2"/>
+                <path d="M18 9h2a2 2 0 0 1 2 2v9a2 2 0 0 1-2 2h-2"/>
+                <path d="M10 6h4"/>
+                <path d="M10 10h4"/>
+                <path d="M10 14h4"/>
+                <path d="M10 18h4"/>
+            </svg>
+        </a>
 
-		{# user #}
-		<a up-target="#content" up-href="{{ path('dashboard_user_index') }}" up-history="replace">
-			<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-user-round"><circle cx="12" cy="8" r="5"/><path d="M20 21a8 8 0 0 0-16 0"/></svg>
-		</a>
+        {# user #}
+        <a up-target="#content" up-href="{{ path('dashboard_user_index') }}" up-history="replace">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                 stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                 class="lucide lucide-user-round">
+                <circle cx="12" cy="8" r="5"/>
+                <path d="M20 21a8 8 0 0 0-16 0"/>
+            </svg>
+        </a>
 
-		{# person #}
-		<a up-target="#content" up-href="{{ path('dashboard_person_index') }}" up-history="replace">
-			<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-user-round-search"><circle cx="10" cy="8" r="5"/><path d="M2 21a8 8 0 0 1 10.434-7.62"/><circle cx="18" cy="18" r="3"/><path d="m22 22-1.9-1.9"/></svg>
-		</a>
+        {# person #}
+        <a up-target="#content" up-href="{{ path('dashboard_person_index') }}" up-history="replace">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                 stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                 class="lucide lucide-user-round-search">
+                <circle cx="10" cy="8" r="5"/>
+                <path d="M2 21a8 8 0 0 1 10.434-7.62"/>
+                <circle cx="18" cy="18" r="3"/>
+                <path d="m22 22-1.9-1.9"/>
+            </svg>
+        </a>
 
-		{# mission #}
-		<a up-target="#content" up-href="{{ path('dashboard_mission_index') }}" up-history="replace">
-			<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-file-minus-2"><path d="M4 22h14a2 2 0 0 0 2-2V7l-5-5H6a2 2 0 0 0-2 2v4"/><path d="M14 2v4a2 2 0 0 0 2 2h4"/><path d="M3 15h6"/></svg>
-		</a>
+        {# mission #}
+        <a up-target="#content" up-href="{{ path('dashboard_mission_index') }}" up-history="replace">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                 stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                 class="lucide lucide-file-minus-2">
+                <path d="M4 22h14a2 2 0 0 0 2-2V7l-5-5H6a2 2 0 0 0-2 2v4"/>
+                <path d="M14 2v4a2 2 0 0 0 2 2h4"/>
+                <path d="M3 15h6"/>
+            </svg>
+        </a>
 
-		{# supplier #}
-		<a up-target="#content" up-href="{{ path('dashboard_supplier_index') }}" up-history="replace">
-			<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-file-code-2"><path d="M4 22h14a2 2 0 0 0 2-2V7l-5-5H6a2 2 0 0 0-2 2v4"/><path d="M14 2v4a2 2 0 0 0 2 2h4"/><path d="m5 12-3 3 3 3"/><path d="m9 18 3-3-3-3"/></svg>
-		</a>
-	</div>
+        {# supplier #}
+        <a up-target="#content" up-href="{{ path('dashboard_supplier_index') }}" up-history="replace">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                 stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                 class="lucide lucide-file-code-2">
+                <path d="M4 22h14a2 2 0 0 0 2-2V7l-5-5H6a2 2 0 0 0-2 2v4"/>
+                <path d="M14 2v4a2 2 0 0 0 2 2h4"/>
+                <path d="m5 12-3 3 3 3"/>
+                <path d="m9 18 3-3-3-3"/>
+            </svg>
+        </a>
+    </div>
 
-	<div>
-		{# log-out #}
-		<a up-target="#content" up-href="{{ path('dashboard_index') }}" up-history="replace">
-			<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-log-out"><path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"/><polyline points="16 17 21 12 16 7"/><line x1="21" x2="9" y1="12" y2="12"/></svg>
-		</a>
-	</div>
+    <div>
+        {# log-out #}
+        <a href="{{ path('app_logout') }}">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24" fill="none"
+                 stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                 class="lucide lucide-log-out">
+                <path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"/>
+                <polyline points="16 17 21 12 16 7"/>
+                <line x1="21" x2="9" y1="12" y2="12"/>
+            </svg>
+        </a>
+    </div>
 
 </div>
