--- a/templates/dashboard/home/index.html.twig
+++ b/templates/dashboard/home/index.html.twig
@@ -2,23 +2,25 @@
 
 {% block content %}
 
-<style>
-    @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Inter:wght@100..900&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap');
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Inter:wght@100..900&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap');
 
-	h2, p, span {
-        font-family: 'DM Sans', sans-serif;
-        -webkit-font-smoothing: antialiased;
-    }
-</style>
+        h2, p, span {
+            font-family: 'DM Sans', sans-serif;
+            -webkit-font-smoothing: antialiased;
+        }
+    </style>
 
-<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
-<main>
-    <div class="flex items-center justify-between p-4 antialiased">
-	    <div class="flex flex-col space-y-2 w-1/2">
-		    <h2 class="text-5xl font-semibold">Dashboard</h2>
-	    </div>
-    </div>
-</main>
+    <main>
+        <div class="flex items-center justify-between p-4 antialiased">
+            <div class="flex flex-col space-y-2 w-1/2">
+                {% if app.user %}
+                    <h2 class="text-5xl font-semibold">Bienvenue {{ app.user.getPerson().getFirstName() }} !</h2>
+                {% endif %}
+            </div>
+        </div>
+    </main>
 
 {% endblock %}
