--- a/templates/dashboard/mission/index.html.twig
+++ b/templates/dashboard/mission/index.html.twig
@@ -1,25 +1,33 @@
-{% extends 'dashboard_layout.html.twig' %} {% block content %}
+{% extends 'dashboard_layout.html.twig' %}
+
+{% set componentPath = 'dashboard/mission/components/' %}
+
+{% block content %}
 
     {% include 'dashboard/components/navbar_component.html.twig' with {
-    'title': 'Mission',
-    'text': 'Cette page vous permet de gérer les missions. Vous pouvez consulter, ajouter, modifier ou supprimer des missions selon vos besoins.',
-    'button_text': 'Ajouter une mission',
-    'button_url': path('dashboard_mission_new')
+        'title': 'Mission',
+        'text': 'Cette page vous permet de gérer les missions. Vous pouvez consulter, ajouter, modifier ou supprimer des missions selon vos besoins.',
+        'button_text': 'Ajouter une mission',
+        'button_url': path('dashboard_mission_new')
     } %}
 
-<section>
-  <div class="mt-6 hidden md:flex md:flex-col">
-    <div class="inline-block min-w-full py-2 align-middle md:px-6 lg:px-8">
-      <div class="overflow-hidden shadow ring-1 ring-black ring-opacity-5 md:rounded-lg">
-        <table class="min-w-full divide-y divide-gray-300">
+    <section>
+        <div class="mt-6 hidden md:flex md:flex-col">
+            <div class="inline-block min-w-full py-2 align-middle md:px-6 lg:px-8">
+                <div class="overflow-hidden shadow ring-1 ring-black ring-opacity-5 md:rounded-lg">
 
-          <thead class="bg-gray-50 w-full">
-            {% include 'dashboard/components/table_header_row.html.twig' with {'columns': ['Id', 'Nom', 'Description', 'Prix', 'Client', 'Manageur', 'Fini', 'Créer le']}%}
-          </thead>
-<table>
-</div>
-    </div>
-  </div>
-</section>
+                    <table class="min-w-full divide-y divide-gray-300">
+
+                        <thead class="bg-gray-50 w-full">
+                        {% include 'dashboard/components/table_header_row.html.twig' with {'columns': ['Id', 'Nom', 'Description', 'Prix', 'Client', 'Manageur', 'Fini', 'Créer le', 'Actions']} %}
+                        </thead>
+
+                        {% include componentPath ~ 'table_body.html.twig' %}
+
+                    </table>
+                </div>
+            </div>
+        </div>
+    </section>
 
 {% endblock %}
