--- a/templates/dashboard/company/components/table_header.html.twig
+++ b/templates/dashboard/company/components/table_header.html.twig
@@ -1,6 +1,6 @@
 <thead class="bg-gray-50">
 <tr>
-    {% set columnHeaders = ['Id', 'Nom', 'Adresse', 'Type', 'Siège social', 'Créer le', 'Actions'] %}
+    {% set columnHeaders = ['Id', 'Nom', 'Adresse', 'Position', 'Siège social', 'Créer le', 'Actions'] %}
     {% for header in columnHeaders %}
         <th scope="col" class="py-3 px-6 text-left font-semibold text-gray-900">{{ header }}</th>
     {% endfor %}
