--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -11,20 +11,23 @@
 
             <div class="flex min-h-full flex-col justify-center px-6 py-12 lg:px-8 antialiased">
                 <div class="sm:mx-auto sm:w-full sm:max-w-md">
-                    <h2 class="mt-10 text-center text-6xl font-semibold leading-9 tracking-tight text-gray-900">Se
-                        connecter
+                    <h2 class="mt-10 text-center text-6xl font-semibold leading-9 tracking-tight text-gray-900">
+                        Se connecter
                     </h2>
-                    <p class="mt-6 text-center">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+                    <p class="mt-6 text-center">Connectez-vous pour accéder à l'ensemble de vos ressources sauvegardées
+                        sur votre tableau de bord. De précieuses informations, données et outils vous attendent pour
+                        optimiser vos processus et maximiser votre efficacité. </p>
                 </div>
                 <div class="mt-10 sm:mx-auto sm:w-full sm:max-w-md">
                     <form action="#" method="POST">
                         <div class="flex-col space-y-6">
+
                             <div>
                                 <label for="email"
                                        class="block text-base font-medium leading-6 text-gray-900">Email</label>
                                 <div class="mt-2">
                                     <input id="email" name="email" type="email" autocomplete="email" required
-                                           class="block w-full rounded-md border-0 px-2 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
+                                           class="block w-full rounded-md border px-4 py-3 text-gray-900 shadow-sm placeholder:text-gray-400"
                                            placeholder="jhon.doe@gmail.com">
                                 </div>
                             </div>
@@ -36,7 +39,7 @@
                                 <div class="mt-2">
                                     <input id="password" name="password" type="password" autocomplete="current-password"
                                            required
-                                           class="block w-full rounded-md border-0 px-2 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
+                                           class="block w-full rounded-md border px-4 py-3 text-gray-900 shadow-sm placeholder:text-gray-400"
                                            placeholder="••••••••">
                                 </div>
                             </div>
