--- a/templates/components/footer.html.twig
+++ b/templates/components/footer.html.twig
@@ -1,12 +1,12 @@
 {% block body %}
 
-<footer>
-    <span class="block text-sm py-4 text-slate-100 sm:text-center bg-transparent fixed bottom-0 left-0 right-0 mx-auto">
+    <footer>
+    <span class="block text-lg py-4 text-slate-100 sm:text-center bg-transparent fixed bottom-0 left-0 right-0 mx-auto">
         ©{{ 'now'|date('Y') }}
-        <a href="https://msconsulting-europe.com/" class="hover:underline">
+        <a href="https://msconsulting-europe.com/" class="hover:underline text-lg">
             MS-consulting
         </a>
         . All Rights Reserved.</span>
-</footer>
+    </footer>
 
 {% endblock %}
