--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -3,25 +3,24 @@
 {% block title %}Freelance Management System{% endblock %}
 
 {% block body %}
-<div class="relative max-w-7xl mx-auto pt-20 sm:pt-24 lg:pt-32">
-    <h1 class="text text-slate-900 font-semibold text-6xl sm:text-6xl lg:text-[90px] tracking-tight text-center ">
-        Simplify your tasks with a Freelance Management System.
-    </h1>
-    <p class="mt-6 text-slate-900 text-lg text-center max-w-3xl mx-auto">
-        Optimisez la gestion de vos projets et de vos collaborateurs indépendants grâce à notre système de gestion des
-        pigistes. Simplifiez la recherche, la collaboration et le suivi des missions pour une productivité accrue.
-    </p>
-    <div class="mt-6 sm:mt-10 flex justify-center">
-        <a href="{{ path('app_login') }}">
-            <button
-                class="group relative inline-flex h-12 items-center justify-center overflow-hidden rounded-md bg-neutral-950 px-6 font-medium text-neutral-200">
-                <span>Lancez-vous</span>
-                <div
-                    class="absolute inset-0 flex h-full w-full justify-center [transform:skew(-12deg)_translateX(-100%)] group-hover:duration-1000 group-hover:[transform:skew(-12deg)_translateX(100%)]">
-                    <div class="relative h-full w-8 bg-white/20"></div>
-                </div>
-            </button>
-        </a>
+    <div class="relative max-w-5xl mx-auto pt-20 sm:pt-24 lg:pt-32">
+        <h1 class="text text-slate-900 font-semibold text-6xl sm:text-6xl lg:text-[108px] tracking-tight text-center ">
+            Drive Success with Our FMS.
+        </h1>
+        <p class="mt-6 text-slate-900 text-lg text-center max-w-3xl mx-auto">
+            Enhance project and freelancer management with our system. Simplify search, collaboration, and mission
+            tracking for increased productivity.
+        </p>
+        <div class="mt-6 sm:mt-10 flex justify-center">
+            <a href="{{ path('app_login') }}">
+                <button class="text-lg roup relative inline-flex h-12 items-center justify-center overflow-hidden rounded-md bg-neutral-950 px-6 text-neutral-200">
+                    <span class="text-lg">Get Started</span>
+                    <div
+                            class="absolute inset-0 flex h-full w-full justify-center [transform:skew(-12deg)_translateX(-100%)] group-hover:duration-1000 group-hover:[transform:skew(-12deg)_translateX(100%)]">
+                        <div class="relative h-full w-8 bg-white/20"></div>
+                    </div>
+                </button>
+            </a>
+        </div>
     </div>
-</div>
 {% endblock %}
