--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -23,6 +23,21 @@
         <div class="antialiased px-4 sm:px-6 md:px-8 h-screen">
             {% include "components/navbar.html.twig" %}
             <main>
+                hello
+                hello
+                hello
+                hello
+                hello
+                hello
+                hello
+                hello
+                hello
+                hello
+                hello
+                hello
+                hello
+                hello
+                hello
                 {% block body %}
                 {% endblock %}
             </main>
