update template + add filters in address and companies

--- a/templates/dashboard/address/edit.html.twig
+++ b/templates/dashboard/address/edit.html.twig
@@ -8,6 +8,6 @@
     {{ form_widget(form) }}
     <button type="submit" class="btn btn-primary">Modifier</button>
     {{ form_end(form) }}
-    <a href="{{ path('address_index') }}">Retour</a>
+    <a href="{{ path('dashboard_address_index') }}">Retour</a>
 
 {% endblock %}
