--- a/templates/dashboard/address/show.html.twig
+++ b/templates/dashboard/address/show.html.twig
@@ -7,7 +7,8 @@
     <p>street : {{ address.street }}</p>
     <p>zipCode : {{ address.zipCode }}</p>
     <p>city : {{ address.city }}</p>
-    <a href="{{ path('address_edit', {id: address.id}) }}">Edit</a>
-    <a href="{{ path('address_index') }}">Back to list</a>
+    <a href="{{ path('dashboard_address_edit', {'id': address.id}) }}">Edit</a>
+    {{ include('dashboard/address/_delete_form.html.twig') }}
+    <a href="{{ path('dashboard_address_index') }}">Back to list</a>
 </div>
 {% endblock %}
