--- a/templates/components/sidebar.html.twig
+++ b/templates/components/sidebar.html.twig
@@ -12,7 +12,7 @@
         </a>
 
         {# address #}
-        <a up-target="#content" up-href="{{ path('address_index') }}" up-history="replace">
+        <a up-target="#content" up-href="{{ path('dashboard_address_index') }}" up-history="replace">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24" fill="none"
                  stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
                  class="lucide lucide-locate">
