--- a/templates/dashboard/address/index.html.twig
+++ b/templates/dashboard/address/index.html.twig
@@ -2,12 +2,12 @@
 
 {% block content %}
 
-	<section>
+	<section class="Dashboard_address_index">
 		{% include 'dashboard/components/navbar_component.html.twig' with {
 			'title': 'Adresse',
     		'text': 'Cette page vous offre la possibilité de gérer les adresses. Vous pouvez consulter, ajouter, modifier ou supprimer des adresses en fonction de vos besoins.',
     		'button_text': 'Ajouter une adresse',
-    		'button_url': path('address_new')
+    		'button_url': path('dashboard_address_new')
     	} %}
 		<div class="mt-6 flex md:flex-col">
 			<div class="inline-block min-w-full py-2 align-middle md:px-6 lg:px-8">
@@ -15,21 +15,29 @@
 					<table class="min-w-full divide-y divide-gray-300">
 						<thead class="bg-gray-50">
 							<tr>
-								<th scope="col" class="py-3 px-6 text-left font-semibold text-gray-900">
-									{{ knp_pagination_sortable(address, 'Id', 'a.id') }}
-								</th>
-								{% for column in ['Numéro de Rue', 'Rue', 'Code Postal', 'Ville', 'Entreprise', 'Actions'] %}
+								{% set columns = {
+									'Id': 'a.id',
+									'Numéro de Rue': 'a.nbStreet',
+									'Rue': 'a.street',
+									'Code Postal': 'a.zipCode',
+									'Ville': 'a.city',
+									'Company': 'c.name'
+								} %}
+								{% for displayedName, realName in columns %}
 									<th scope="col" class="py-3 px-6 text-left font-semibold text-gray-900">
-										{{ column }}
+										{{ knp_pagination_sortable(address, displayedName, realName) }}
 									</th>
 								{% endfor %}
+								<th scope="col" class="py-3 px-6 text-left font-semibold text-gray-900">
+									Actions
+								</th>
 							</tr>
 						</thead>
 						<tbody class="divide-y divide-gray-200 bg-white">
 							{% for data in address %}
 								<tr>
 									<td class="whitespace-nowrap px-6 py-4 font-medium text-gray-900 sm:pl-6">
-										<a href="{{ path('address_detail', {'id': data.id}) }}">{{ data.id }}</a>
+										<a href="{{ path('dashboard_address_show', {'id': data.id}) }}">{{ data.id }}</a>
 									</td>
 									{% for property in ['nbStreet', 'street', 'zipCode', 'city'] %}
 										<td class="whitespace-nowrap px-6 py-4 text-gray-500">
@@ -45,8 +53,8 @@
 									</td>
 									<td class="whitespace-nowrap px-6 py-4 text-gray-500">
 										<div class="space-x-1 opacity-80">
-											<a href="{{ path('address_detail', { id: data.id }) }}">Show</a>
-											<a href="{{ path('address_edit', { id: data.id }) }}">Edit</a>
+											<a href="{{ path('dashboard_address_show', { id: data.id }) }}">Show</a>
+											<a href="{{ path('dashboard_address_edit', { id: data.id }) }}">Edit</a>
 										</div>
 									</td>
 								</tr>
