--- a/templates/dashboard/company/index.html.twig
+++ b/templates/dashboard/company/index.html.twig
@@ -17,13 +17,63 @@
         <div class="mt-6 hidden md:flex md:flex-col">
             <div class="inline-block min-w-full py-2 align-middle md:px-6 lg:px-8">
                 <div class="overflow-hidden shadow ring-1 ring-black ring-opacity-5 md:rounded-lg">
-
                     <table class="min-w-full divide-y divide-gray-300">
-
-                        {% include componentPath ~ 'table_header.html.twig' %}
-
-                        {% include componentPath ~ 'table_body.html.twig' %}
-
+                        <thead class="bg-gray-50">
+                        <tr>
+                            {% set columns = {
+                                'Id': 'c.id',
+                                'Nom': 'c.name',
+                                'Adresse': 'a.street',
+                                'Position': 't.label',
+                                'Siège social': 'c.headOffice',
+                                'Créer le': 'c.createdAt'
+                            } %}
+                            {% for displayedName, realName in columns %}
+                                <th scope="col" class="py-3 px-6 text-left font-semibold text-gray-900">
+                                    {{ knp_pagination_sortable(companies, displayedName, realName) }}
+                                </th>
+                            {% endfor %}
+                            <th scope="col" class="py-3 px-6 text-left font-semibold text-gray-900">
+                                Actions
+                            </th>
+                        </tr>
+                        </thead>
+                        <tbody class="divide-y divide-gray-200 bg-white">
+                        {% for company in companies %}
+                            <tr>
+                                <td class="whitespace-nowrap px-6 py-4 font-medium text-gray-900 sm:pl-6">
+                                    {{ company.id }}
+                                </td>
+                                <td class="whitespace-nowrap px-6 py-4 text-gray-500">
+                                    {{ company.name|default('null') }}
+                                </td>
+                                <td class="whitespace-nowrap px-6 py-4 text-gray-500">
+                                    <a href="{{ path('dashboard_address_show', { id: company.getAddress().getId() }) }}" class="underline opacity-75">
+                                        {{ company.getAddress().getNbStreet() ~ ' ' ~ company.getAddress().getStreet() }}
+                                    </a>
+                                </td>
+                                <td class="whitespace-nowrap px-6 py-4 text-gray-500">
+                                    {{ company.getType().getLabel() }}
+                                </td>
+                                <td class="whitespace-nowrap px-6 py-4 text-gray-500">
+                                    {% if company.isHeadOffice() == 1 %}
+                                        Yes
+                                    {% else %}
+                                        No
+                                    {% endif %}
+                                </td>
+                                <td class="whitespace-nowrap px-6 py-4 text-gray-500">
+                                    {{ company.createdAt|date('Y-m-d') }}
+                                </td>
+                                <td class="whitespace-nowrap px-6 py-4 text-gray-500">
+                                    <div class="space-x-1 opacity-80">
+                                        <a href="{{ path('dashboard_company_show', { id: company.id }) }}">Show</a>
+                                        <a href="{{ path('dashboard_company_edit', { id: company.id }) }}">Edit</a>
+                                    </div>
+                                </td>
+                            </tr>
+                        {% endfor %}
+                        </tbody>
                     </table>
                 </div>
             </div>
