--- a/templates/dashboard/address/index.html.twig
+++ b/templates/dashboard/address/index.html.twig
@@ -35,7 +35,7 @@
 						</thead>
 						<tbody class="divide-y divide-gray-200 bg-white">
 							{% for data in address %}
-								<tr>
+								<tr class="hover:bg-gray-100">
 									<td class="whitespace-nowrap px-6 py-4 font-medium text-gray-900 sm:pl-6">
 										<a href="{{ path('dashboard_address_show', {'id': data.id}) }}">{{ data.id }}</a>
 									</td>
